--- a/src/libcephd/CMakeLists.txt
+++ b/src/libcephd/CMakeLists.txt
@@ -42,5 +42,5 @@ endif(HAVE_ARMV8_CRC)
 merge_static_libraries(cephd ${merge_libs})
 
 # TODO: install these libraries and add them to rpm and deb packages
-#install(TARGETS cephd DESTINATION ${CMAKE_INSTALL_LIBDIR})
-#install(FILES ../include/cephd/libcephd.h DESTINATION include/cephd)
+install(TARGETS cephd DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(FILES ../include/cephd/libcephd.h DESTINATION include/cephd)
