--- a/qa/suites/upgrades-ds/13x_2x/132-ec-upgrade.yaml
+++ b/qa/suites/upgrades-ds/13x_2x/132-ec-upgrade.yaml
@@ -1,3 +1,5 @@
+set_cdn_repo:
+    rhbuild: '1.3.2'
 overrides:
   ceph-deploy:
     prepare_activate: true
@@ -28,7 +30,7 @@ roles:
 tasks:
 - ssh-keys:
 - ceph-deploy:
-    rhbuild: '1.3.2' 
+    rhbuild: '1.3.2'
     fs: xfs
 - exec:
     client.0:
