--- a/qa/suites/upgrades-ds/13x_2x/132-sortbitwise.yaml
+++ b/qa/suites/upgrades-ds/13x_2x/132-sortbitwise.yaml
@@ -1,3 +1,5 @@
+set_cdn_repo:
+    rhbuild: '1.3.2'
 overrides:
   ceph-deploy:
     prepare_activate: true
@@ -30,7 +32,7 @@ roles:
 tasks:
 - ssh-keys:
 - ceph-deploy:
-    rhbuild: '1.3.2' 
+    rhbuild: '1.3.2'
     fs: xfs
 - install.ship_utilities:
 - sequential:
@@ -54,7 +56,7 @@ tasks:
       - client.0
 - exec:
     mon.a:
-    - ceph osd set sortbitwise 
+    - ceph osd set sortbitwise
 - exec:
     client.0:
     - ceph osd pool create test-pool2 1024 1024
