--- a/qa/suites/upgrades-ds/13x_2x/132-sortbitwise.yaml
+++ b/qa/suites/upgrades-ds/13x_2x/132-sortbitwise.yaml
@@ -22,12 +22,14 @@ overrides:
         osd pool default pgp num:  1024
 roles:
 - - mon.a
-  - mon.b
-  - mon.c
-  - osd.0
+- - mon.b
+- - mon.c
+- - osd.0
   - osd.1
-- - osd.2
-  - osd.3
+  - osd.2
+- - osd.3
+  - osd.4
+  - osd.5
 - - client.0
 tasks:
 - ssh-keys:
@@ -52,7 +54,10 @@ tasks:
     latest: true
     roles:
       - mon.a
+      - mon.b
+      - mon.c
       - osd.2
+      - osd.4
       - client.0
 - exec:
     mon.a:
